# apr

./: CHANGES  CMakeLists.txt  NOTICE  README.cmake  configure.in  libapr.dsp
.github/workflows/: linux.yml  macos.yml  windows-vcpkg.yml  windows.yml
buffer/: apr_buffer.c
include/: apr.h.in  apr.hwc  apr_ldap.h  apr_version.h
include/arch/win32/: apr_arch_networkio.h
include/private/: apu_ldap_internal.h.in  apu_ldap_internal.hw
ldap/: apr_ldap.c
locks/unix/: proc_mutex.c
network_io/win32/: sendrecv.c  sockets.c  sockopt.c
shmem/unix/: shm.c
test/: abts_tests.h  echoargs.bat  echoargs.c  testldap.c  testmmap.c  testproc.c  testshm.c  testsock.c
threadproc/win32/: proc.c
util-misc/: apu_dso.c
